UPDATING: Fixing bugs

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-FLASK_ENV=developent
-SQLALCHEMY_DATABASE_URI=postgresql://user:senha@localhost:5432/database
+FLASK_ENV=development
+SQLALCHEMY_DATABASE_URI=postgresql://user:password@localhost:5432/database
